--- a/app/ui/layout/layout.css
+++ b/app/ui/layout/layout.css
@@ -13,6 +13,7 @@
 .section {
   @extend .container;
   padding: var(--pad-lg);
+  min-height: min-content;
 
   &.no-flex {
     flex: none;
